# minesweeper-qt

./: CMakeLists.txt  LICENSE  README.md
resources/: resources.qrc
src/: appinfo.h  highScore.h  highScoreDialog.h  highScoreModel.h  main.cpp  mainwindow.h
